--- a/app/src/main/res/layout/activity_grayscale_threshold.xml
+++ b/app/src/main/res/layout/activity_grayscale_threshold.xml
@@ -31,8 +31,8 @@
         android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="25dp"
-        android:textColor="#ff0000"
         android:text="Before Processing"
+        android:textColor="#ff0000"
         android:textSize="18sp" />
 
     <TextView
@@ -42,13 +42,12 @@
         android:layout_marginLeft="180dp"
         android:layout_marginStart="180dp"
         android:layout_marginTop="25dp"
-        android:textColor="#ff0000"
         android:text="After Processing"
+        android:textColor="#ff0000"
         android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/ivAfter"
-        android:scaleType="fitCenter"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_alignParentLeft="true"
@@ -57,16 +56,28 @@
         android:layout_marginLeft="180dp"
         android:layout_marginStart="180dp"
         android:layout_marginTop="80dp"
+        android:scaleType="fitCenter"
         app:srcCompat="@android:color/transparent" />
 
     <Button
-        android:text="Start"
-        android:textAllCaps="false"
-        android:background="@android:color/transparent"
-        android:textColor="#ff0000"
+        android:id="@+id/btnStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/btnStart" />
+        android:background="@android:color/transparent"
+        android:text="Start"
+        android:textAllCaps="false"
+        android:textColor="#ff0000" />
+
+    <Button
+        android:id="@+id/intentbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/btnStart"
+        android:layout_alignStart="@+id/btnStart"
+        android:layout_below="@+id/ivAfter"
+        android:layout_marginTop="94dp"
+        android:text="Main Screen"
+        android:textAllCaps="false" />
 </RelativeLayout>
