divide is not working

--- a/app/src/main/res/layout/camera_tab.xml
+++ b/app/src/main/res/layout/camera_tab.xml
@@ -5,47 +5,27 @@
     tools:context="com.example.ankur.photomath.MainActivity">
 
 
-    <TextureView
-        android:id="@+id/textureView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true" />
+<ImageView
+    android:id="@+id/ImageView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:scaleType="fitCenter"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:id="@+id/relativeLayout">
 
-    <ToggleButton
-        android:id="@+id/ibtnFlash"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/toggle_selector"
-        android:scaleType="fitCenter"
-        android:textOff=""
-        android:textOn="" />
+    </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
         android:id="@+id/Capture"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:scaleType="centerInside"
+        android:src="@android:drawable/ic_menu_camera"
+        android:layout_marginBottom="28dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="40dp"
-        android:background="@android:color/transparent"
-        android:scaleType="fitCenter" />
-
-    <Button
-        android:id="@+id/shape"
-        android:text=""
-        android:textSize="32sp"
-        android:layout_width="match_parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_height="100dp"
-        android:background="@drawable/rectangle_shape"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
-
 </RelativeLayout>
